Final commit. Adds comments and final touches.

--- a/views/aboutme.ejs
+++ b/views/aboutme.ejs
@@ -1,4 +1,11 @@
+<!-- /* Name: About Me */
+/* Author: Zac Force */
+/* Website Name: Portfolio */
+/* File Description: This page displays info about me */ -->
+
+<!-- include the header -->
 <%- include partials/header.ejs %>
+<!-- insert page info received by the index file -->
     <h1><%= title %></h1>
     <p><%= message %></p>
     <br>
@@ -13,4 +20,6 @@
     <p><%= messageL %></p>
     <br>
     <p><%= messageU %></p>
+    
+<!-- include the footer to end the html page -->
 <%- include partials/footer.ejs %>
