--- a/views/contactme.ejs
+++ b/views/contactme.ejs
@@ -1,4 +1,11 @@
+<!-- /* Name: Contact Me */
+/* Author: Zac Force */
+/* Website Name: Portfolio */
+/* File Description: This page displays my contact info to user */ -->
+
+<!-- inserts the header to the html page -->
 <%- include partials/header.ejs %>
+<!-- insert page data from the index file -->
     <h1><%= title %></h1>
     <p><%= message %></p>
     <br>
@@ -7,4 +14,5 @@
     <p><%= messageP %></p>
     <br>
     <p><%= messageE %></p>
+<!-- inserts the footer to finish off the HTML page -->
 <%- include partials/footer.ejs %>
