--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,11 @@
+<!-- /* Name: Home Page */
+/* Author: Zac Force */
+/* Website Name: Portfolio */
+/* File Description: This page main page on my website */ -->
+
+<!-- insert the header to start off the HTML page -->
 <%- include partials/header.ejs %>
+<!-- insert the data for the page from the index file.js file -->
     <h1><%= title %></h1>
     <p><%= message %></p>
     <br>
@@ -17,4 +24,5 @@
     <h4><%= contactmeT %></h4>
     <br>
     <p><%= contactmeM %></p>
+<!-- insert the footer to finish off the HTML page -->
 <%- include partials/footer.ejs %>
