--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,9 @@
+<!-- /* Name: footer.ejs */
+/* Author: Zac Force */
+/* Website Name: Portfolio */
+/* File Description: This page sets the footer for each webpage */ -->
+
+<!-- footer content and finish off the HTML code -->
 <footer class="alert alert-info">
 	&copy; 2016 | Assignment 1
 </footer>
