--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,9 @@
+<!-- /* Name: header.ejs */
+/* Author: Zac Force */
+/* Website Name: Portfolio */
+/* File Description: This page sets the header for each webpage */ -->
+
+<!-- start off the standard HTML code for each page including nav bar and title -->
 <!DOCTYPE html>
 <html>
   <head>
